# tdc

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  bench_bit_rank.cpp  bench_bit_select.cpp  bench_bit_vector.cpp  bench_cmp.cpp  bench_coders.cpp  bench_hash_map.cpp  bench_hash_set.cpp  bench_int_vector.cpp  bench_lz77.cpp  bench_lz78.cpp  bench_predecessor.cpp  bench_predecessor_dynamic.cpp  bench_sketch.cpp  bench_sorted_sequence.cpp  bit_rank.cpp  bit_select.cpp  bit_vector.cpp  int_vector.cpp
cmakemodules/: FindIntegerStructures.cmake  FindLEDA.cmake  FindMPFR.cmake  FindPlads.cmake  FindPowercap.cmake  FindSTree.cmake  InitSubmodules.cmake
docs/: CMakeLists.txt  Doxyfile.in  namespaces.hpp  tdc-style.css
docs/tools/: tools.md
examples/: CMakeLists.txt  bit_vector.cpp  int_vector.cpp  stats.cpp  stats_rapl.cpp
include/tdc/: namespace.hpp
include/tdc/code/: ascii_coder.hpp  binary_coder.hpp  coder.hpp  delta0_coder.hpp  delta_coder.hpp  namespace.hpp  rice_coder.hpp
include/tdc/code/huff/: adaptive_huffman_coder_base.hpp  forward_coder.hpp  huffman_coder.hpp  huffman_coder_base.hpp  hybrid_forward_coder.hpp  knuth_coder.hpp
include/tdc/comp/lz77/: factor.hpp  factor_buffer.hpp  factor_file_output.hpp  factor_multi_output.hpp  factor_readable_output.hpp  factor_stats_output.hpp  gzip.hpp  lcp.hpp  long_term_trie.hpp  lz77_sa.hpp  lz77_sw.hpp  lzfp.hpp  lzfptop.hpp  lzqgram.hpp  lzqgram_btree.hpp  lzqgram_hash.hpp  lzqgram_sketch.hpp  lzqgram_sketch2.hpp  lzqgram_sketch3.hpp  lzqgram_table.hpp  lzqgram_table_rolling.hpp  lzqgram_trie.hpp  lzsketch.hpp  noop.hpp  sliding_window_trie.hpp  stats.hpp  tries.hpp
include/tdc/comp/lz77/archive/: lzqgram.hpp  lzqgram_hash.hpp  lzqgram_sketch2.hpp  lzqgram_sketch3.hpp  lzqgram_trie.hpp  min_count.hpp  min_count_map.hpp  qgram_hash.hpp
include/tdc/comp/lz78/: binary_trie.hpp  lz78.hpp  lz78_binary.hpp  stats.hpp
include/tdc/framework/: algorithm.hpp  algorithm_info.hpp  application.hpp  config.hpp  crossproduct.hpp  executable.hpp  namespace.hpp  registry.hpp
include/tdc/hash/: byte.hpp  crc32.hpp  entry.hpp  fnv32.hpp  function.hpp  linear_probing.hpp  map.hpp  namespace.hpp  quadratic_probing.hpp  rolling.hpp  set.hpp  table.hpp
include/tdc/intrisics/: lzcnt.hpp  namespace.hpp  parallel_bits.hpp  parallel_compare.hpp  pcmp.hpp  pext.hpp  popcnt.hpp  select.hpp  tzcnt.hpp
include/tdc/io/: bit_istream.hpp  bit_ostream.hpp  buffered_reader.hpp  buffered_writer.hpp  load_file.hpp  mmap_file.hpp  namespace.hpp  null_ostream.hpp
include/tdc/malloc/: malloc_callback.hpp
include/tdc/math/: bit_mask.hpp  idiv.hpp  ilog2.hpp  imath.hpp  iminmax.hpp  isqrt.hpp  namespace.hpp  prime.hpp
include/tdc/mpf/: mpfloat.hpp  namespace.hpp
include/tdc/mpf/random/: binomial_distribution.hpp  engine.hpp  namespace.hpp  normal_distribution.hpp  uniform_distribution.hpp
include/tdc/pred/: binary_search.hpp  binary_search_hybrid.hpp  compressed_trie8.hpp  fusion_node.hpp  fusion_node_8.hpp  fusion_node_internals.hpp  index.hpp  namespace.hpp  octrie.hpp  octrie_top.hpp  result.hpp
include/tdc/pred/dynamic/: btree.hpp  dynamic_fusion_node_8.hpp  dynamic_index.hpp  dynamic_index_list.hpp  dynamic_index_map.hpp  dynamic_octrie.hpp  dynamic_pred_bv.hpp  dynamic_rankselect.hpp  yfast.hpp  yfast_sorted_list.hpp
include/tdc/pred/util/: packed_byte_array_8.hpp  packed_int3_array_9.hpp
include/tdc/random/: namespace.hpp  permutation.hpp  seed.hpp  vector.hpp
include/tdc/rapl/: config.hpp  energy.hpp  energy_buffer.hpp  namespace.hpp  rapl_phase_extension.hpp  reader.hpp
include/tdc/sketch/: count_min.hpp
include/tdc/stat/: json.hpp  malloc_callback.hpp  namespace.hpp  phase.hpp  phase_extension.hpp  time.hpp
include/tdc/test/: assert.hpp
include/tdc/uint/: print_uint.hpp  uint1024.hpp  uint128.hpp  uint256.hpp  uint40.hpp  uint512.hpp  uint_half.hpp  uint_pow2.hpp
include/tdc/util/: assert.hpp  augmented_sketch.hpp  char.hpp  concepts.hpp  count_min_sketch.hpp  hybrid_ptr.hpp  index.hpp  int_type_traits.hpp  lcp.hpp  likely.hpp  linked_list.hpp  linked_list_pool.hpp  literals.hpp  min_count.hpp  min_count_map.hpp  min_inc.hpp  rank_u64.hpp  ring_buffer_pow2.hpp  select_u64.hpp  skip_accessor.hpp  type_list.hpp  uint128.hpp  uint256.hpp  uint40.hpp
include/tdc/util/benchmark/: integer_operation.hpp  namespace.hpp
include/tdc/vec/: allocate.hpp  bit_rank.hpp  bit_select.hpp  bit_vector.hpp  fixed_width_int_vector.hpp  int_vector.hpp  item_ref.hpp  iterator.hpp  namespace.hpp  rank_u64.hpp  select_u64.hpp  sorted_sequence.hpp  static_vector.hpp  util.hpp  vector_builder.hpp
results/: pred_dynamic.txt
src/: CMakeLists.txt
src/code/: CMakeLists.txt  binary_coder.cpp  instances.cpp
src/framework/: CMakeLists.txt  algorithm_info.cpp  application.cpp  config.cpp
src/intrisics/: CMakeLists.txt  intrisics.cpp
src/io/: CMakeLists.txt  bit_istream.cpp  bit_ostream.cpp  load_file.cpp  mmap_file.cpp
src/malloc/: CMakeLists.txt  malloc.cpp
src/math/: CMakeLists.txt  isqrt.cpp  prime.cpp
src/pred/: CMakeLists.txt  binary_search.cpp  binary_search_hybrid.cpp  compressed_trie8.cpp  fusion_node.cpp  fusion_node_8.cpp  fusion_node_internals.cpp  index.cpp  octrie.cpp  octrie_top.cpp
src/pred/dynamic/: btree.cpp  dynamic_fusion_node.cpp  dynamic_fusion_node_8.cpp  dynamic_octrie.cpp  dynamic_rankselect.cpp  sorted_array_node_8.cpp
src/random/: CMakeLists.txt  permutation.cpp
src/rapl/: CMakeLists.txt  rapl_phase_extension.cpp  reader.cpp
src/stat/: CMakeLists.txt  malloc.cpp  mem_tracking.cpp  phase.cpp
src/uint/: CMakeLists.txt  uint256.cpp
src/vec/: CMakeLists.txt  allocate.cpp  bit_rank.cpp  bit_select.cpp  bit_vector.cpp  fixed_width_int_vector.cpp  int_vector.cpp  sorted_sequence.cpp  static_vector.cpp
test/: CMakeLists.txt  test_btree_min.cpp  test_framework.cpp  test_linked_list_pool.cpp  test_min.cpp  test_mmap.cpp  test_rolling_hash.cpp  test_vectors.cpp
tools/: CMakeLists.txt  dynds.cpp  permutation.cpp  primes.cpp  result-to-csv.py
(+9 files in other folders)
